--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,19 +1,36 @@
-<h1>Editing Book</h1>
-<%= form_with model: @book do |f| %>
-<div class="form-group">
-    <label for="book_title">Title</label>
-    <%= f.text_field :title %>
-</div>
-<div class="form-group">
-    <label for="book_opinion">Opinion</label>
-    <%= f.text_area :body %>
-</div>
-<div class="form-group">
-    <%=f.submit "Update Book" %>
-</div>
-<% end %>
 
 
-  <%= link_to "Show",book_path %>
-  |
-  <%= link_to "Back",books_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <div id="error_explanation">
+        <% if @book.errors.any? %>
+          <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        <% end %>
+      </div>
+        <%= form_with model: @book do |f| %>
+        <div class="form-group">
+          <label for="book_title">Title</label>
+          <%= f.text_field :title,class: "form-control title" %>
+        </div>
+        <div class="form-group">
+          <label for="book_opinion">Opinion</label>
+          <%= f.text_area :body ,class: "form-control body" %>
+        </div>
+        <div class="form-group">
+          <%=f.submit "Update Book" ,class: "btn btn-success"%>
+        </div>
+        <% end %>
+
+        <%= link_to "Show",book_path %>
+        |
+        <%= link_to "Back",books_path %>
+    </div>
+  </div>
+</div>
