--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,17 +1,17 @@
 <div class="container px-5 px-sm-0">
+  <div id="error_explanation">
+    <% if @book.errors.any? %>
+      <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    <% end %>
+  </div>
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
-      <div id="error_explanation">
-        <% if @user.errors.any? %>
-          <h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3>
-          <ul>
-            <% @user.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
-        <% end %>
-      </div>
       <%= image_tag @user.get_profile_image(100,100) %>
 
       <table class="table">
@@ -35,7 +35,7 @@
       </div>
 
         <h2 class="mt-3">New book</h2>
-        <%= form_with model: @book do |f| %>
+        <%= form_with model: @book, method: :post do |f| %>
         <div class="form-group">
           <label for="book_title">Title</label><br/>
           <%=f.text_field :title %>
@@ -65,10 +65,16 @@
         <tbody>
           <% @books.each do |book| %>
           <tr>
-             <td><%= image_tag book.user.get_profile_image(100,100) %></td>
-             <td><%= link_to book_path(book.id) do %>
-             <%= book.title %>
-             <% end %></td>
+             <td>
+               <%= link_to (book.user) do %>
+               <%= image_tag book.user.get_profile_image(100,100) %>
+               <% end %>
+             </td>
+             <td>
+               <%= link_to book_path(book.id) do %>
+               <%= book.title %>
+               <% end %>
+             </td>
              <td><%= book.body %></td>
           </tr>
           <% end %>
