--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
       </div>
 
         <h2 class="mt-3">New book</h2>
-        <%= form_with model: @book do |f| %>
+        <%= form_with model: @book_new do |f| %>
         <div class="form-group">
           <label for="book_title">Title</label><br/>
           <%=f.text_field :title %>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="col-md-8 offset-md-1">
-      <h2>Books detail</h2>
+      <h2>Book detail</h2>
       <table class="table">
         <tbody>
           <tr>
@@ -58,12 +58,12 @@
             <td><%= @book.body %></td>
             <td>
               <% if @book.user==current_user %>
-                <%= link_to "edit",edit_book_path(@book.id),class: "btn btn-sm btn-success" %>
+                <%= link_to "Edit",edit_book_path(@book.id),class: "btn btn-sm btn-success" %>
               <% end %>
             </td>
             <td>
               <% if @book.user==current_user %>
-                <%= link_to "destroy",book_path(@book.id),method: :delete, "data-confirm"=>"本当に消しますか？", class: "btn btn-sm btn-danger" %>
+                <%= link_to "Destroy",book_path(@book.id),method: :delete, "data-confirm"=>"本当に消しますか？", class: "btn btn-sm btn-danger" %>
               <% end %>
             </td>
           </tr>
