--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -14,10 +14,10 @@
       <p>about various books!</p>
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
-          <a><%= link_to "Log in",user_session_path,class: "btn btn-info btn-sm btn-block", method: :post %></a>
+          <%= link_to "Log in",user_session_path,class: "btn btn-info btn-sm btn-block", method: :post %>
         </div><br/>
         <div class="row">
-          <a><%= link_to "Sign up",new_user_registration_path,class: "btn btn-success btn-sm btn-block" %></a>
+          <%= link_to "Sign up",new_user_registration_path,class: "btn btn-success btn-sm btn-block" %>
         </div>
       </div>
     </div>
