--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
                   <% end %>
                 </li>
                 <li>
-                  <%= link_to homes_about_path, class: "nav-link text-ligth" do %>
+                  <%= link_to home_about_path, class: "nav-link text-ligth" do %>
                   <i class="fa-solid fa-link"></i> About
                   <% end %>
                 </li>
