--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>User info</h2>
-            <div id="error_explanation">
+      <div id="error_explanation">
         <% if @user.errors.any? %>
           <h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3>
           <ul>
@@ -16,19 +16,16 @@
 
         <div class="form-group">
           <label for="user_name">Name</label>
-          <br>
           <%= f.text_field :name,class: "form-control name" %>
         </div>
 
         <div class="form-group">
-          <label for="user_image">Image</label>
-          <br>
-          <%=f.file_field:get_profile_image,placeholder:"プロフィール画像",accept:"image/*" %>
+          <label for="user_image">Image</label><br>
+          <%=f.file_field :profile_image, class: "form-controll-file user_image" ,accept:"image/*" %>
         </div>
 
         <div class="form-group">
           <label for="user_introduction">Introduction</label>
-          <br>
           <%= f.text_area :introduction, class: "form-control introduction" %>
         </div>
         <div class="form-group">
